--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 /* custom.css */
-@import url("http://fonts.googleapis.com/css?family=Kalam:400,300,700");
-@import url("http://fonts.googleapis.com/css?family=Handjet:400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Kalam:400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Handjet:400,300,700");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:400,300,700&display=swap");
 
 .container{
